add gitignore file version2

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-SoftLab_HW_1.iml
-inspectionProfiles/profiles_settings.xml
-misc.xml
-modules.xml
-vcs.xml
+.idea/SoftLab_HW_1.iml
+.idea/inspectionProfiles/profiles_settings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/vcs.xml
